[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/levels/level2/Level2.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/Tile.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/scoreHud.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/PauseGui.tscn" type="PackedScene" id=7]

[node name="Level2" type="Node2D"]
script = ExtResource( 1 )

[node name="PauseGui" parent="." instance=ExtResource( 7 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Container" parent="CanvasLayer" instance=ExtResource( 5 )]
margin_right = 225.0
margin_bottom = 96.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 120, 1448 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 520, 1256 )
current = true
process_mode = 0
limit_left = -45
limit_bottom = 1600
smoothing_enabled = true

[node name="Tile" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 1576 )

[node name="Tile2" parent="." instance=ExtResource( 3 )]
position = Vector2( 92, 1576 )

[node name="Tile3" parent="." instance=ExtResource( 3 )]
position = Vector2( 152, 1576 )

[node name="Tile4" parent="." instance=ExtResource( 3 )]
position = Vector2( 212, 1576 )

[node name="Tile5" parent="." instance=ExtResource( 3 )]
position = Vector2( 272, 1576 )

[node name="Tile6" parent="." instance=ExtResource( 3 )]
position = Vector2( 332, 1576 )

[node name="Tile7" parent="." instance=ExtResource( 3 )]
position = Vector2( 392, 1576 )

[node name="Tile8" parent="." instance=ExtResource( 3 )]
position = Vector2( 452, 1576 )

[node name="Tile9" parent="." instance=ExtResource( 3 )]
position = Vector2( 504, 1576 )

[node name="Tile10" parent="." instance=ExtResource( 3 )]
position = Vector2( 564, 1576 )

[node name="Tile11" parent="." instance=ExtResource( 3 )]
position = Vector2( 624, 1576 )

[node name="Tile12" parent="." instance=ExtResource( 3 )]
position = Vector2( 684, 1576 )

[node name="Tile13" parent="." instance=ExtResource( 3 )]
position = Vector2( 744, 1576 )

[node name="Tile14" parent="." instance=ExtResource( 3 )]
position = Vector2( 804, 1576 )

[node name="Tile15" parent="." instance=ExtResource( 3 )]
position = Vector2( 864, 1576 )

[node name="Tile16" parent="." instance=ExtResource( 3 )]
position = Vector2( 924, 1576 )

[node name="Tile17" parent="." instance=ExtResource( 3 )]
position = Vector2( 984, 1576 )

[node name="Tile18" parent="." instance=ExtResource( 3 )]
position = Vector2( 1044, 1576 )

[node name="Tile19" parent="." instance=ExtResource( 3 )]
position = Vector2( 1104, 1576 )

[node name="Tile20" parent="." instance=ExtResource( 3 )]
position = Vector2( 1164, 1576 )

[node name="Tile21" parent="." instance=ExtResource( 3 )]
position = Vector2( 1224, 1576 )

[node name="Tile22" parent="." instance=ExtResource( 3 )]
position = Vector2( 1284, 1576 )

[node name="Tile23" parent="." instance=ExtResource( 3 )]
position = Vector2( 1344, 1576 )

[node name="Tile24" parent="." instance=ExtResource( 3 )]
position = Vector2( 1404, 1576 )

[node name="Tile25" parent="." instance=ExtResource( 3 )]
position = Vector2( 1456, 1576 )

[node name="Tile26" parent="." instance=ExtResource( 3 )]
position = Vector2( 1516, 1576 )

[node name="Tile27" parent="." instance=ExtResource( 3 )]
position = Vector2( 1576, 1576 )

[node name="Tile28" parent="." instance=ExtResource( 3 )]
position = Vector2( 1636, 1576 )

[node name="Tile29" parent="." instance=ExtResource( 3 )]
position = Vector2( 1696, 1576 )

[node name="Tile30" parent="." instance=ExtResource( 3 )]
position = Vector2( 1756, 1576 )

[node name="Tile31" parent="." instance=ExtResource( 3 )]
position = Vector2( 1816, 1576 )

[node name="Tile141" parent="." instance=ExtResource( 3 )]
position = Vector2( 616, 1187 )

[node name="Tile142" parent="." instance=ExtResource( 3 )]
position = Vector2( 676, 1187 )

[node name="Tile143" parent="." instance=ExtResource( 3 )]
position = Vector2( 736, 1187 )

[node name="Tile144" parent="." instance=ExtResource( 3 )]
position = Vector2( 796, 1187 )

[node name="Tile145" parent="." instance=ExtResource( 3 )]
position = Vector2( 856, 1187 )

[node name="Tile146" parent="." instance=ExtResource( 3 )]
position = Vector2( 908, 1187 )

[node name="Tile147" parent="." instance=ExtResource( 3 )]
position = Vector2( 968, 1187 )

[node name="Tile148" parent="." instance=ExtResource( 3 )]
position = Vector2( 1028, 1187 )

[node name="Tile149" parent="." instance=ExtResource( 3 )]
position = Vector2( 1088, 1187 )

[node name="Tile150" parent="." instance=ExtResource( 3 )]
position = Vector2( 1148, 1187 )

[node name="Tile151" parent="." instance=ExtResource( 3 )]
position = Vector2( 1208, 1187 )

[node name="Tile167" parent="." instance=ExtResource( 3 )]
position = Vector2( 172, 904 )

[node name="Tile168" parent="." instance=ExtResource( 3 )]
position = Vector2( 232, 904 )

[node name="Tile169" parent="." instance=ExtResource( 3 )]
position = Vector2( 292, 904 )

[node name="Tile170" parent="." instance=ExtResource( 3 )]
position = Vector2( 352, 904 )

[node name="Tile171" parent="." instance=ExtResource( 3 )]
position = Vector2( 1152, 904 )

[node name="Tile226" parent="." instance=ExtResource( 3 )]
position = Vector2( 496, 1032 )

[node name="Tile172" parent="." instance=ExtResource( 3 )]
position = Vector2( 1204, 904 )

[node name="Tile173" parent="." instance=ExtResource( 3 )]
position = Vector2( 1264, 904 )

[node name="Tile174" parent="." instance=ExtResource( 3 )]
position = Vector2( 1324, 904 )

[node name="Tile175" parent="." instance=ExtResource( 3 )]
position = Vector2( 1384, 904 )

[node name="Tile176" parent="." instance=ExtResource( 3 )]
position = Vector2( 1444, 904 )

[node name="Tile177" parent="." instance=ExtResource( 3 )]
position = Vector2( 1504, 904 )

[node name="Tile178" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 600 )

[node name="Tile179" parent="." instance=ExtResource( 3 )]
position = Vector2( 84, 600 )

[node name="Tile180" parent="." instance=ExtResource( 3 )]
position = Vector2( 144, 600 )

[node name="Tile181" parent="." instance=ExtResource( 3 )]
position = Vector2( 204, 600 )

[node name="Tile182" parent="." instance=ExtResource( 3 )]
position = Vector2( 264, 600 )

[node name="Tile183" parent="." instance=ExtResource( 3 )]
position = Vector2( 316, 600 )

[node name="Tile184" parent="." instance=ExtResource( 3 )]
position = Vector2( 376, 600 )

[node name="Tile185" parent="." instance=ExtResource( 3 )]
position = Vector2( 436, 600 )

[node name="Tile186" parent="." instance=ExtResource( 3 )]
position = Vector2( 496, 600 )

[node name="Tile187" parent="." instance=ExtResource( 3 )]
position = Vector2( 556, 600 )

[node name="Tile188" parent="." instance=ExtResource( 3 )]
position = Vector2( 616, 600 )

[node name="Tile189" parent="." instance=ExtResource( 3 )]
position = Vector2( 672, 600 )

[node name="Tile190" parent="." instance=ExtResource( 3 )]
position = Vector2( 732, 600 )

[node name="Tile191" parent="." instance=ExtResource( 3 )]
position = Vector2( 792, 600 )

[node name="Tile192" parent="." instance=ExtResource( 3 )]
position = Vector2( 8, 296 )

[node name="Tile193" parent="." instance=ExtResource( 3 )]
position = Vector2( 68, 296 )

[node name="Tile194" parent="." instance=ExtResource( 3 )]
position = Vector2( 120, 296 )

[node name="Tile195" parent="." instance=ExtResource( 3 )]
position = Vector2( 180, 296 )

[node name="Tile196" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 296 )

[node name="Tile197" parent="." instance=ExtResource( 3 )]
position = Vector2( 300, 296 )

[node name="Tile198" parent="." instance=ExtResource( 3 )]
position = Vector2( 360, 296 )

[node name="Tile199" parent="." instance=ExtResource( 3 )]
position = Vector2( 420, 296 )

[node name="Tile200" parent="." instance=ExtResource( 3 )]
position = Vector2( 700, 328 )

[node name="Tile201" parent="." instance=ExtResource( 3 )]
position = Vector2( 1024, 296 )

[node name="Tile202" parent="." instance=ExtResource( 3 )]
position = Vector2( 1076, 296 )

[node name="Tile203" parent="." instance=ExtResource( 3 )]
position = Vector2( 1136, 296 )

[node name="Tile204" parent="." instance=ExtResource( 3 )]
position = Vector2( 1196, 296 )

[node name="Tile223" parent="." instance=ExtResource( 3 )]
position = Vector2( 1792, 264 )

[node name="Tile224" parent="." instance=ExtResource( 3 )]
position = Vector2( 1852, 264 )

[node name="Tile225" parent="." instance=ExtResource( 3 )]
position = Vector2( 1912, 264 )

[node name="Tile218" parent="." instance=ExtResource( 3 )]
position = Vector2( 1336, 512 )

[node name="Tile219" parent="." instance=ExtResource( 3 )]
position = Vector2( 1396, 512 )

[node name="Tile220" parent="." instance=ExtResource( 3 )]
position = Vector2( 1448, 512 )

[node name="Tile221" parent="." instance=ExtResource( 3 )]
position = Vector2( 1508, 512 )

[node name="Tile222" parent="." instance=ExtResource( 3 )]
position = Vector2( 1568, 512 )

[node name="Tile205" parent="." instance=ExtResource( 3 )]
position = Vector2( 856, 600 )

[node name="Tile206" parent="." instance=ExtResource( 3 )]
position = Vector2( 916, 600 )

[node name="Tile207" parent="." instance=ExtResource( 3 )]
position = Vector2( 976, 600 )

[node name="Tile208" parent="." instance=ExtResource( 3 )]
position = Vector2( 1824, 640 )

[node name="Tile209" parent="." instance=ExtResource( 3 )]
position = Vector2( 1884, 640 )

[node name="Tile210" parent="." instance=ExtResource( 3 )]
position = Vector2( 1948, 640 )

[node name="Tile211" parent="." instance=ExtResource( 3 )]
position = Vector2( 2008, 640 )

[node name="Tile212" parent="." instance=ExtResource( 3 )]
position = Vector2( 2068, 640 )

[node name="Tile213" parent="." instance=ExtResource( 3 )]
position = Vector2( 1040, 600 )

[node name="Tile214" parent="." instance=ExtResource( 3 )]
position = Vector2( 1104, 648 )

[node name="Tile215" parent="." instance=ExtResource( 3 )]
position = Vector2( 1760, 688 )

[node name="Tile216" parent="." instance=ExtResource( 3 )]
position = Vector2( 1696, 744 )

[node name="Tile217" parent="." instance=ExtResource( 3 )]
position = Vector2( 1624, 512 )

[node name="Tile152" parent="." instance=ExtResource( 3 )]
position = Vector2( 1268, 1187 )

[node name="Tile32" parent="." instance=ExtResource( 3 )]
position = Vector2( 1876, 1576 )

[node name="Tile123" parent="." instance=ExtResource( 3 )]
position = Vector2( 392, 1392 )

[node name="Tile124" parent="." instance=ExtResource( 3 )]
position = Vector2( 452, 1392 )

[node name="Tile125" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 1392 )

[node name="Tile126" parent="." instance=ExtResource( 3 )]
position = Vector2( 572, 1392 )

[node name="Tile127" parent="." instance=ExtResource( 3 )]
position = Vector2( 632, 1392 )

[node name="Tile128" parent="." instance=ExtResource( 3 )]
position = Vector2( 692, 1392 )

[node name="Tile129" parent="." instance=ExtResource( 3 )]
position = Vector2( 752, 1392 )

[node name="Tile130" parent="." instance=ExtResource( 3 )]
position = Vector2( 812, 1392 )

[node name="Tile131" parent="." instance=ExtResource( 3 )]
position = Vector2( 872, 1392 )

[node name="Tile132" parent="." instance=ExtResource( 3 )]
position = Vector2( 932, 1392 )

[node name="Tile133" parent="." instance=ExtResource( 3 )]
position = Vector2( 984, 1392 )

[node name="Tile134" parent="." instance=ExtResource( 3 )]
position = Vector2( 1044, 1392 )

[node name="Tile135" parent="." instance=ExtResource( 3 )]
position = Vector2( 1104, 1392 )

[node name="Tile136" parent="." instance=ExtResource( 3 )]
position = Vector2( 1164, 1392 )

[node name="Tile137" parent="." instance=ExtResource( 3 )]
position = Vector2( 1224, 1392 )

[node name="Tile138" parent="." instance=ExtResource( 3 )]
position = Vector2( 1284, 1392 )

[node name="Tile153" parent="." instance=ExtResource( 3 )]
position = Vector2( 1288, 1296 )

[node name="Tile154" parent="." instance=ExtResource( 3 )]
position = Vector2( 1328, 1187 )

[node name="Tile155" parent="." instance=ExtResource( 3 )]
position = Vector2( 1372, 1187 )

[node name="Tile156" parent="." instance=ExtResource( 3 )]
position = Vector2( 1432, 1187 )

[node name="Tile157" parent="." instance=ExtResource( 3 )]
position = Vector2( 1492, 1187 )

[node name="Tile158" parent="." instance=ExtResource( 3 )]
position = Vector2( 1552, 1187 )

[node name="Tile159" parent="." instance=ExtResource( 3 )]
position = Vector2( 1553, 1123 )

[node name="Tile166" parent="." instance=ExtResource( 3 )]
position = Vector2( 1624, 1067 )

[node name="Tile160" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, 1264 )

[node name="Tile161" parent="." instance=ExtResource( 3 )]
position = Vector2( 96, 1264 )

[node name="Tile162" parent="." instance=ExtResource( 3 )]
position = Vector2( 160, 1264 )

[node name="Tile163" parent="." instance=ExtResource( 3 )]
position = Vector2( 216, 1264 )

[node name="Tile164" parent="." instance=ExtResource( 3 )]
position = Vector2( 1688, 1011 )

[node name="Tile165" parent="." instance=ExtResource( 3 )]
position = Vector2( 1748, 1011 )

[node name="Tile139" parent="." instance=ExtResource( 3 )]
position = Vector2( 264, 1512 )

[node name="Tile140" parent="." instance=ExtResource( 3 )]
position = Vector2( 328, 1448 )

[node name="Tile33" parent="." instance=ExtResource( 3 )]
position = Vector2( 1936, 1576 )

[node name="Tile34" parent="." instance=ExtResource( 3 )]
position = Vector2( 1996, 1576 )

[node name="Tile35" parent="." instance=ExtResource( 3 )]
position = Vector2( 2056, 1576 )

[node name="Tile88" parent="." instance=ExtResource( 3 )]
position = Vector2( 32, -24 )

[node name="Tile89" parent="." instance=ExtResource( 3 )]
position = Vector2( 92, -24 )

[node name="Tile90" parent="." instance=ExtResource( 3 )]
position = Vector2( 152, -24 )

[node name="Tile91" parent="." instance=ExtResource( 3 )]
position = Vector2( 212, -24 )

[node name="Tile92" parent="." instance=ExtResource( 3 )]
position = Vector2( 272, -24 )

[node name="Tile93" parent="." instance=ExtResource( 3 )]
position = Vector2( 332, -24 )

[node name="Tile94" parent="." instance=ExtResource( 3 )]
position = Vector2( 392, -24 )

[node name="Tile95" parent="." instance=ExtResource( 3 )]
position = Vector2( 452, -24 )

[node name="Tile96" parent="." instance=ExtResource( 3 )]
position = Vector2( 504, -24 )

[node name="Tile97" parent="." instance=ExtResource( 3 )]
position = Vector2( 564, -24 )

[node name="Tile98" parent="." instance=ExtResource( 3 )]
position = Vector2( 624, -24 )

[node name="Tile99" parent="." instance=ExtResource( 3 )]
position = Vector2( 684, -24 )

[node name="Tile100" parent="." instance=ExtResource( 3 )]
position = Vector2( 744, -24 )

[node name="Tile101" parent="." instance=ExtResource( 3 )]
position = Vector2( 804, -24 )

[node name="Tile102" parent="." instance=ExtResource( 3 )]
position = Vector2( 864, -24 )

[node name="Tile103" parent="." instance=ExtResource( 3 )]
position = Vector2( 924, -24 )

[node name="Tile104" parent="." instance=ExtResource( 3 )]
position = Vector2( 984, -24 )

[node name="Tile105" parent="." instance=ExtResource( 3 )]
position = Vector2( 1044, -24 )

[node name="Tile106" parent="." instance=ExtResource( 3 )]
position = Vector2( 1104, -24 )

[node name="Tile107" parent="." instance=ExtResource( 3 )]
position = Vector2( 1164, -24 )

[node name="Tile108" parent="." instance=ExtResource( 3 )]
position = Vector2( 1224, -24 )

[node name="Tile109" parent="." instance=ExtResource( 3 )]
position = Vector2( 1284, -24 )

[node name="Tile110" parent="." instance=ExtResource( 3 )]
position = Vector2( 1344, -24 )

[node name="Tile111" parent="." instance=ExtResource( 3 )]
position = Vector2( 1404, -24 )

[node name="Tile112" parent="." instance=ExtResource( 3 )]
position = Vector2( 1456, -24 )

[node name="Tile113" parent="." instance=ExtResource( 3 )]
position = Vector2( 1516, -24 )

[node name="Tile114" parent="." instance=ExtResource( 3 )]
position = Vector2( 1576, -24 )

[node name="Tile115" parent="." instance=ExtResource( 3 )]
position = Vector2( 1636, -24 )

[node name="Tile116" parent="." instance=ExtResource( 3 )]
position = Vector2( 1696, -24 )

[node name="Tile117" parent="." instance=ExtResource( 3 )]
position = Vector2( 1756, -24 )

[node name="Tile118" parent="." instance=ExtResource( 3 )]
position = Vector2( 1816, -24 )

[node name="Tile119" parent="." instance=ExtResource( 3 )]
position = Vector2( 1876, -24 )

[node name="Tile120" parent="." instance=ExtResource( 3 )]
position = Vector2( 1936, -24 )

[node name="Tile121" parent="." instance=ExtResource( 3 )]
position = Vector2( 1996, -24 )

[node name="Tile122" parent="." instance=ExtResource( 3 )]
position = Vector2( 2056, -24 )

[node name="Tile36" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1576 )
rotation = 1.5708

[node name="Tile37" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1512 )
rotation = 1.5708

[node name="Tile38" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1448 )
rotation = 1.5708

[node name="Tile39" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1384 )
rotation = 1.5708

[node name="Tile40" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1336 )
rotation = 1.5708

[node name="Tile41" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1272 )
rotation = 1.5708

[node name="Tile42" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1208 )
rotation = 1.5708

[node name="Tile43" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1144 )
rotation = 1.5708

[node name="Tile44" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1080 )
rotation = 1.5708

[node name="Tile45" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 1016 )
rotation = 1.5708

[node name="Tile46" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 952 )
rotation = 1.5708

[node name="Tile47" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 888 )
rotation = 1.5708

[node name="Tile48" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 840 )
rotation = 1.5708

[node name="Tile49" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 776 )
rotation = 1.5708

[node name="Tile50" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 712 )
rotation = 1.5708

[node name="Tile51" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 648 )
rotation = 1.5708

[node name="Tile52" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 584 )
rotation = 1.5708

[node name="Tile53" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 520 )
rotation = 1.5708

[node name="Tile54" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 456 )
rotation = 1.5708

[node name="Tile55" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 392 )
rotation = 1.5708

[node name="Tile56" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 344 )
rotation = 1.5708

[node name="Tile57" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 280 )
rotation = 1.5708

[node name="Tile58" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 216 )
rotation = 1.5708

[node name="Tile59" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 152 )
rotation = 1.5708

[node name="Tile60" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 88 )
rotation = 1.5708

[node name="Tile61" parent="." instance=ExtResource( 3 )]
position = Vector2( 2120, 24 )
rotation = 1.5708

[node name="Tile62" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1568 )
rotation = -1.5708

[node name="Tile63" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1504 )
rotation = -1.5708

[node name="Tile64" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1440 )
rotation = -1.5708

[node name="Tile65" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1376 )
rotation = -1.5708

[node name="Tile66" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1328 )
rotation = -1.5708

[node name="Tile67" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1264 )
rotation = -1.5708

[node name="Tile68" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1200 )
rotation = -1.5708

[node name="Tile69" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1136 )
rotation = -1.5708

[node name="Tile70" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1072 )
rotation = -1.5708

[node name="Tile71" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 1008 )
rotation = -1.5708

[node name="Tile72" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 944 )
rotation = -1.5708

[node name="Tile73" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 880 )
rotation = -1.5708

[node name="Tile74" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 832 )
rotation = -1.5708

[node name="Tile75" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 768 )
rotation = -1.5708

[node name="Tile76" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 704 )
rotation = -1.5708

[node name="Tile77" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 640 )
rotation = -1.5708

[node name="Tile78" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 576 )
rotation = -1.5708

[node name="Tile79" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 512 )
rotation = -1.5708

[node name="Tile80" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 448 )
rotation = -1.5708

[node name="Tile81" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 384 )
rotation = -1.5708

[node name="Tile82" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 336 )
rotation = -1.5708

[node name="Tile83" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 272 )
rotation = -1.5708

[node name="Tile84" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 208 )
rotation = -1.5708

[node name="Tile85" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 144 )
rotation = -1.5708

[node name="Tile86" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 80 )
rotation = -1.5708

[node name="Tile87" parent="." instance=ExtResource( 3 )]
position = Vector2( -32, 16 )
rotation = -1.5708

[node name="Coin" parent="." instance=ExtResource( 4 )]
position = Vector2( 440, 1504 )

[node name="Coin2" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, 1504 )

[node name="Coin3" parent="." instance=ExtResource( 4 )]
position = Vector2( 632, 1504 )

[node name="Coin4" parent="." instance=ExtResource( 4 )]
position = Vector2( 720, 1504 )

[node name="Coin5" parent="." instance=ExtResource( 4 )]
position = Vector2( 808, 1504 )

[node name="Coin6" parent="." instance=ExtResource( 4 )]
position = Vector2( 896, 1504 )

[node name="Coin23" parent="." instance=ExtResource( 4 )]
position = Vector2( 1263, 824 )

[node name="Coin24" parent="." instance=ExtResource( 4 )]
position = Vector2( 1351, 824 )

[node name="Coin25" parent="." instance=ExtResource( 4 )]
position = Vector2( 1876, 568 )

[node name="Coin26" parent="." instance=ExtResource( 4 )]
position = Vector2( 1964, 568 )

[node name="Coin27" parent="." instance=ExtResource( 4 )]
position = Vector2( 1408, 440 )

[node name="Coin28" parent="." instance=ExtResource( 4 )]
position = Vector2( 1496, 440 )

[node name="Coin29" parent="." instance=ExtResource( 4 )]
position = Vector2( 148, 224 )

[node name="Coin30" parent="." instance=ExtResource( 4 )]
position = Vector2( 236, 224 )

[node name="Coin31" parent="." instance=ExtResource( 4 )]
position = Vector2( 203, 816 )

[node name="Coin32" parent="." instance=ExtResource( 4 )]
position = Vector2( 291, 816 )

[node name="Coin17" parent="." instance=ExtResource( 4 )]
position = Vector2( 840, 1091 )

[node name="Coin18" parent="." instance=ExtResource( 4 )]
position = Vector2( 928, 1091 )

[node name="Coin19" parent="." instance=ExtResource( 4 )]
position = Vector2( 1032, 1091 )

[node name="Coin20" parent="." instance=ExtResource( 4 )]
position = Vector2( 1120, 1091 )

[node name="Coin21" parent="." instance=ExtResource( 4 )]
position = Vector2( 1208, 1091 )

[node name="Coin22" parent="." instance=ExtResource( 4 )]
position = Vector2( 1296, 1091 )

[node name="Coin13" parent="." instance=ExtResource( 4 )]
position = Vector2( 332, 528 )

[node name="Coin14" parent="." instance=ExtResource( 4 )]
position = Vector2( 420, 528 )

[node name="Coin15" parent="." instance=ExtResource( 4 )]
position = Vector2( 508, 528 )

[node name="Coin16" parent="." instance=ExtResource( 4 )]
position = Vector2( 596, 528 )

[node name="Coin7" parent="." instance=ExtResource( 4 )]
position = Vector2( 700, 1320 )

[node name="Coin8" parent="." instance=ExtResource( 4 )]
position = Vector2( 788, 1320 )

[node name="Coin9" parent="." instance=ExtResource( 4 )]
position = Vector2( 892, 1320 )

[node name="Coin10" parent="." instance=ExtResource( 4 )]
position = Vector2( 980, 1320 )

[node name="Coin11" parent="." instance=ExtResource( 4 )]
position = Vector2( 1068, 1320 )

[node name="Coin12" parent="." instance=ExtResource( 4 )]
position = Vector2( 1156, 1320 )

[node name="Enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( 376, 1504 )
speed = 250
moveDist = 1000

[node name="Enemy2" parent="." instance=ExtResource( 6 )]
position = Vector2( 448, 1325 )
speed = 200
moveDist = 700

[node name="Enemy3" parent="." instance=ExtResource( 6 )]
position = Vector2( 52, 216 )
moveDist = 200

[node name="Enemy4" parent="." instance=ExtResource( 6 )]
position = Vector2( 84, 520 )
speed = 150
moveDist = 700

[node name="Enemy5" parent="." instance=ExtResource( 6 )]
position = Vector2( 84, 520 )
speed = 200
moveDist = 700

[connection signal="tree_entered" from="." to="." method="_on_Level2_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_Level2_exiting"]
